<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="weight">Weight(kg)</string>
    <string name="height">Height(meter)</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="bmi">BMI : </string>
    <string name="status">Status : </string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="input_error">Input required</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
</resources>
